# nfp-boilerplate

./: docker-compose.yml
nfp-backend/: alembic.ini  pyproject.toml  requirements.txt
nfp-backend/app/: main.py
nfp-backend/app/routers/: plots.py
nfp-frontend/: package-lock.json  package.json
nfp-frontend/pages/: createaccount.js  home.js
